--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -62,6 +62,8 @@ dependencies:
   image_picker: ^0.8.7
   dio: ^5.0.1
   confetti: ^0.7.0
+  shared_preferences: ^2.0.18
+  flutter_spinkit: ^5.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
