--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -64,6 +64,9 @@ dependencies:
   confetti: ^0.7.0
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.1.10
+  flutter_launcher_icons: ^0.12.0
+  shared_preferences: ^2.1.0
+  introduction_screen: ^3.1.7
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -74,7 +77,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
-
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "lib/assets/images/logo.png"
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
 
@@ -94,6 +100,10 @@ flutter:
       - lib/assets/images/signinblue.svg
       - lib/assets/images/signupblue.svg
       - lib/assets/images/logo.png
+      - lib/assets/images/audiobook.jpg
+      - lib/assets/images/booksavvy.jpg
+      - lib/assets/images/buybooks.jpg
+      - lib/assets/images/discoverbooks.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
