--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,8 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   shared_preferences: ^2.1.0
   introduction_screen: ^3.1.7
+  downloads_path_provider: ^0.1.0
+  permission_handler: ^10.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
