--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -68,6 +68,7 @@ dependencies:
   shared_preferences: ^2.1.0
   introduction_screen: ^3.1.7
   permission_handler: ^10.2.0
+  loading_animation_widget: ^1.2.0+4
 dev_dependencies:
   flutter_test:
     sdk: flutter
