--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,7 +60,7 @@ dependencies:
   syncfusion_flutter_pdfviewer: ^20.4.52
   syncfusion_flutter_pdf: ^20.4.52
   image_picker: ^0.8.7
-  dio: ^5.0.1
+  dio: ^4.0.6
   confetti: ^0.7.0
   flutter_spinkit: ^5.1.0
   url_launcher: ^6.1.10
@@ -69,6 +69,7 @@ dependencies:
   introduction_screen: ^3.1.7
   permission_handler: ^10.2.0
   loading_animation_widget: ^1.2.0+4
+  chat_gpt_sdk: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
