--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   permission_handler: ^10.2.0
   loading_animation_widget: ^1.2.0+4
   chat_gpt_sdk: ^2.0.0
+  mailer: ^6.0.1
 dev_dependencies:
   flutter_test:
     sdk: flutter
