--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -71,6 +71,11 @@ dependencies:
   loading_animation_widget: ^1.2.0+4
   chat_gpt_sdk: ^2.0.0
   mailer: ^6.0.1
+  awesome_snackbar_content: ^0.1.3
+  motion_toast: ^2.6.7
+  widget_circular_animator: ^1.0.0
+  animated_text_kit: ^4.2.2
+  google_fonts: ^4.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
