--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.1
   flutter_signin_button: ^2.0.0
-  advanced_search: ^2.2.3
+#  advanced_search: ^2.2.3
   file_picker: ^5.2.3
   regexed_validator: ^2.0.0+1
   reviews_slider: ^2.0.0
@@ -54,7 +54,7 @@ dependencies:
   firebase_core: ^2.5.0
   google_sign_in: ^5.4.4
   firebase_storage: ^11.0.11
-  flutter_image_compress: ^1.1.3
+  flutter_image_compress: ^2.0.3
   flutter_tts: ^3.6.3
   encrypt: ^5.0.1
   syncfusion_flutter_pdfviewer: ^20.4.52
@@ -70,15 +70,12 @@ dependencies:
   permission_handler: ^10.2.0
   loading_animation_widget: ^1.2.0+4
   chat_gpt_sdk: ^2.0.0
-  mailer: ^6.0.1
   awesome_snackbar_content: ^0.1.3
-  motion_toast: ^2.6.7
+#  motion_toast: ^2.6.7
   widget_circular_animator: ^1.0.0
-  animated_text_kit: ^4.2.2
+#  animated_text_kit: ^4.2.2
   google_fonts: ^4.0.4
-  firebase_admin: ^0.2.0
   read_pdf_text: ^0.2.1
-  highlight_text: ^1.6.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
