--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -76,6 +76,7 @@ dependencies:
 #  animated_text_kit: ^4.2.2
   google_fonts: ^4.0.4
   read_pdf_text: ^0.2.1
+  flutter_windowmanager: ^0.2.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
